--- a/BCSDemoWebsite/Views/StartPage/Index.cshtml
+++ b/BCSDemoWebsite/Views/StartPage/Index.cshtml
@@ -10,3 +10,6 @@
 <div>
     @Html.PropertyFor(m => m.CurrentPage.MainBody)
 </div>
+<div>
+    @Html.PropertyFor(m => m.CurrentPage.Content)
+</div>
