--- a/BCSDemoWebsite/Views/ListDisplayBlock/Index.cshtml
+++ b/BCSDemoWebsite/Views/ListDisplayBlock/Index.cshtml
@@ -1,15 +1,21 @@
 ﻿@model BCSDemoWebsite.Models.ViewModels.ListDisplayViewModel
 
+<br />
+<div class="container">
+    @foreach (var page in Model.ArticlePageList)
+    {
 
-@foreach (var page in Model.PageList)
-{
-    <div>
-       <img src="@Url.ContentUrl(page.Image)" style="width:100px;height:100px" />
-    </div>
-    <div>
-        @Html.PropertyFor(m => page.Heading)
-    </div>
-    <div>
-        <a href="@page.LinkURL" title="Go to Link">Read More</a>
-    </div>
-}
+        <div class="list-group col-lg-3">
+            <br />
+            <div class="list-group-item active">
+                @Html.PropertyFor(m => page.ArticleHeading)
+            </div>
+            <div class="list-group-item">
+                <img src="@Url.ContentUrl(page.ArticleImage)" style="width:100px;height:100px" />
+                <a href="@page.LinkURL" title="Go to Link">Read More</a>
+            </div>
+            <div>
+            </div>
+        </div>
+    }
+</div>
