--- a/BCSDemoWebsite/Content/Site.css
+++ b/BCSDemoWebsite/Content/Site.css
@@ -1,1 +1,7 @@
-﻿
+﻿.carousel-inner > .item > img,
+.carousel-inner > .item > a > img
+{
+    width: auto;
+    height: 500px;
+    margin: auto;
+}
